--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,13 +10,16 @@
   <body>
     <div class="wrapper">
       <header>
+        <!-- Main header -->
         <h1>Password Generator</h1>
       </header>
       <div class="card">
         <div class="card-header">
+          <!-- Header within text box area -->
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
+          <!-- Text area -->
           <textarea
             readonly
             id="password"
@@ -25,10 +28,12 @@
           ></textarea>
         </div>
         <div class="card-footer">
+          <!-- Button -->
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
+    <!-- Linked JavaScript file -->
     <script src="script.js"></script>
   </body>
 </html>
