--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Develop/css/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -34,6 +34,6 @@
       </div>
     </div>
     <!-- Linked JavaScript file -->
-    <script src="script.js"></script>
+    <script src="./Develop/js/script.js"></script>
   </body>
 </html>
